Refactor sign_up_controller packages
