# responses/ping_controller/get_ping_response/response.go
@@ -1,9 +1,9 @@
 package get_ping_response
 
 type Response struct {
-    Data DataResponse `json:"data"`
+    Data Data `json:"data"`
 }
 
-type DataResponse struct {
+type Data struct {
     Message string `json:"message" example:"pong"`
 }
